fix tags from overflowing

--- a/src/components/tags.module.scss
+++ b/src/components/tags.module.scss
@@ -5,6 +5,7 @@
   margin-bottom: 60px;
   padding-left: 0;
   list-style: none;
+  flex-wrap: wrap;
 
   li {
     margin: 0 15px;
